# bakalarsky_projekt

bak_projekt_robot/: bak_projekt_robot.ino
komunikacia/komunikacia/: CMakeLists.txt  package.xml
komunikacia/komunikacia/msg/: Pohyb.msg  rychlost_pasov.msg  senzor_data.msg
komunikacia/komunikacia/src/: odoberatel.cpp  publikovatel.cpp  videoUprava.cpp
zaciatocnik_navod/: CMakeLists.txt  package.xml
zaciatocnik_navod/launch/: turtlemimic.launch
zaciatocnik_navod/msg/: Num.msg
zaciatocnik_navod/src/: add_two_ints_client.cpp  add_two_ints_server.cpp  talker.cpp
