<?xml version="1.0"?>
<package format="2">
  <name>komunikacia</name>
  <version>0.1.0</version>
  <description> komunikacia package, definovanie msg suborov rychlost_pasov.msg a senzor_data.msg, uzol videoUprava_node pre upravu a zobrazenie video zaznamu </description>


  <maintainer email="perelsob6@gmail.come">Peter Jakubjak</maintainer>
  <license>BSD</license>



  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>


  </export>
</package>
